modified to run in colab

--- a/train.ipynb
+++ b/train.ipynb
@@ -1,141 +1,267 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from models.mpnn_ptr import MpnnPtr\n",
-    "from torch import nn\n",
-    "import torch\n",
-    "from utils.utils import communication_cost, calculate_baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def init_weights(m):\n",
-    "    for name, param in m.named_parameters():\n",
-    "        nn.init.uniform_(param.data, -0.08, 0.08)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataloader, distance_matrices = torch.load('data/data_64.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "128"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.10"
+    },
+    "colab": {
+      "name": "train.ipynb",
+      "provenance": []
     }
-   ],
-   "source": [
-    "dataloader.batch_size"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_graph_size = 64\n",
-    "mpnn_ptr = MpnnPtr(input_dim=max_graph_size, embedding_dim=75, hidden_dim=81, K=3, n_layers=4,p_dropout=0, logit_clipping=True, device=device)\n",
-    "mpnn_ptr.to(device)\n",
-    "mpnn_ptr.apply(init_weights)\n",
-    "optim = torch.optim.Adam(mpnn_ptr.parameters(), lr=0.0001)\n",
-    "num_epochs = 3500\n",
-    "epoch_penalty = torch.zeros(len(dataloader))\n",
-    "loss_list_pre = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mpnn_ptr.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for epoch in range(num_epochs):\n",
-    "    epoch_penalty[:] = 0\n",
-    "    for i, (data, distance_matrix) in enumerate(zip(dataloader, distance_matrices)):\n",
-    "        num_samples = 16\n",
-    "        \n",
-    "        samples, predicted_mappings, log_likelihoods_sum = mpnn_ptr(data,num_samples)\n",
-    "        # samples shape: (batch_size, num_samples, max_graph_size_in_batch)\n",
-    "        # predicted_mappings shape: (batch_size, max_graph_size_in_batch)\n",
-    "        # log_likelihoods_sum shape: (batch_size,)\n",
-    "        penalty = communication_cost(data.edge_index, data.edge_attr, data.batch, data.num_graphs, distance_matrix, predicted_mappings)\n",
-    "        epoch_penalty[i] = penalty.sum()\n",
-    "        penalty_baseline = calculate_baseline(data.edge_index, data.edge_attr, data.batch, data.num_graphs, distance_matrix, samples)\n",
-    "        loss = torch.mean((penalty.detach() - penalty_baseline.detach()) * log_likelihoods_sum)\n",
-    "        optim.zero_grad()\n",
-    "        loss.backward()\n",
-    "        nn.utils.clip_grad_norm_(mpnn_ptr.parameters(), max_norm=1, norm_type=2)\n",
-    "        optim.step()\n",
-    "    batch_loss = epoch_penalty.sum().item()\n",
-    "    loss_list_pre.append(batch_loss)\n",
-    "    print('Epoch: {}/{}, Loss: {}'.format(epoch + 1, num_epochs, batch_loss))"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 0
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mjfvEAFjGzPa",
+        "outputId": "4cbd32ce-6b50-40c9-e9d0-351ae106d59a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!git clone https://github.com/arunsammit/MPNN-Ptr mpnn_ptr\n",
+        "%cd mpnn_ptr"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'mpnn_ptr'...\n",
+            "remote: Enumerating objects: 212, done.\u001b[K\n",
+            "remote: Counting objects: 100% (212/212), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (141/141), done.\u001b[K\n",
+            "remote: Total 212 (delta 100), reused 163 (delta 62), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (212/212), 16.77 MiB | 3.28 MiB/s, done.\n",
+            "Resolving deltas: 100% (100/100), done.\n",
+            "/content/mpnn_ptr\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GdfJoa3jH8BH",
+        "outputId": "bf5684bb-9f50-40a6-b241-fd0946e8f115",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.10.0+cu111.html"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in links: https://data.pyg.org/whl/torch-1.10.0+cu111.html\n",
+            "Collecting torch-scatter\n",
+            "  Downloading https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_scatter-2.0.9-cp37-cp37m-linux_x86_64.whl (7.9 MB)\n",
+            "\u001b[K     |████████████████████████████████| 7.9 MB 5.4 MB/s \n",
+            "\u001b[?25hCollecting torch-sparse\n",
+            "  Downloading https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_sparse-0.6.12-cp37-cp37m-linux_x86_64.whl (3.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.5 MB 24.4 MB/s \n",
+            "\u001b[?25hCollecting torch-cluster\n",
+            "  Downloading https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_cluster-1.5.9-cp37-cp37m-linux_x86_64.whl (2.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.3 MB 40.9 MB/s \n",
+            "\u001b[?25hCollecting torch-spline-conv\n",
+            "  Downloading https://data.pyg.org/whl/torch-1.10.0%2Bcu113/torch_spline_conv-1.2.1-cp37-cp37m-linux_x86_64.whl (747 kB)\n",
+            "\u001b[K     |████████████████████████████████| 747 kB 57.6 MB/s \n",
+            "\u001b[?25hCollecting torch-geometric\n",
+            "  Downloading torch_geometric-2.0.2.tar.gz (325 kB)\n",
+            "\u001b[K     |████████████████████████████████| 325 kB 4.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from torch-sparse) (1.4.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (1.19.5)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (4.62.3)\n",
+            "Requirement already satisfied: networkx in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (2.6.3)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (1.0.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (2.23.0)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (1.1.5)\n",
+            "Collecting rdflib\n",
+            "  Downloading rdflib-6.0.2-py3-none-any.whl (407 kB)\n",
+            "\u001b[K     |████████████████████████████████| 407 kB 42.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: googledrivedownloader in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (0.4)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (2.11.3)\n",
+            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (3.0.6)\n",
+            "Collecting yacs\n",
+            "  Downloading yacs-0.1.8-py3-none-any.whl (14 kB)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from torch-geometric) (3.13)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/dist-packages (from jinja2->torch-geometric) (2.0.1)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas->torch-geometric) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->torch-geometric) (2.8.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas->torch-geometric) (1.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from rdflib->torch-geometric) (57.4.0)\n",
+            "Collecting isodate\n",
+            "  Downloading isodate-0.6.0-py2.py3-none-any.whl (45 kB)\n",
+            "\u001b[K     |████████████████████████████████| 45 kB 3.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->torch-geometric) (2.10)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->torch-geometric) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->torch-geometric) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->torch-geometric) (2021.10.8)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->torch-geometric) (3.0.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->torch-geometric) (1.1.0)\n",
+            "Building wheels for collected packages: torch-geometric\n",
+            "  Building wheel for torch-geometric (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for torch-geometric: filename=torch_geometric-2.0.2-py3-none-any.whl size=535570 sha256=b35fb15b94bff5ca6fb0647203e381ff60d9a24ef6395652670083ed60fc818c\n",
+            "  Stored in directory: /root/.cache/pip/wheels/3f/08/13/2321517088bb2e95bfd0e45033bb9c923189e5b2078e0be4ef\n",
+            "Successfully built torch-geometric\n",
+            "Installing collected packages: isodate, yacs, rdflib, torch-spline-conv, torch-sparse, torch-scatter, torch-geometric, torch-cluster\n",
+            "Successfully installed isodate-0.6.0 rdflib-6.0.2 torch-cluster-1.5.9 torch-geometric-2.0.2 torch-scatter-2.0.9 torch-sparse-0.6.12 torch-spline-conv-1.2.1 yacs-0.1.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "collapsed": true,
+        "id": "iGeoT5pqx3HS"
+      },
+      "source": [
+        "from models.mpnn_ptr import MpnnPtr\n",
+        "from torch import nn\n",
+        "import torch\n",
+        "from utils.utils import communication_cost, calculate_baseline"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fd_nu5tox3HV"
+      },
+      "source": [
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o3zKvw68x3HW"
+      },
+      "source": [
+        "def init_weights(m):\n",
+        "    for name, param in m.named_parameters():\n",
+        "        nn.init.uniform_(param.data, -0.08, 0.08)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yq8FmxGGx3HW"
+      },
+      "source": [
+        "dataloader, distance_matrices = torch.load('data/data_64.pt')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tKM5nO4Px3HX",
+        "outputId": "23c0b7c6-6a9c-4c31-b22b-80b08cc3a1a9"
+      },
+      "source": [
+        "dataloader.batch_size"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "128"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CFqoZKv6x3HY"
+      },
+      "source": [
+        "max_graph_size = 64\n",
+        "mpnn_ptr = MpnnPtr(input_dim=max_graph_size, embedding_dim=75, hidden_dim=81, K=3, n_layers=4,p_dropout=0, logit_clipping=True, device=device)\n",
+        "mpnn_ptr.to(device)\n",
+        "mpnn_ptr.apply(init_weights)\n",
+        "optim = torch.optim.Adam(mpnn_ptr.parameters(), lr=0.0001)\n",
+        "num_epochs = 3500\n",
+        "epoch_penalty = torch.zeros(len(dataloader))\n",
+        "loss_list_pre = []"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4UoiYvg_x3HY"
+      },
+      "source": [
+        "mpnn_ptr.train()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nHXRexxQx3HZ"
+      },
+      "source": [
+        "for epoch in range(num_epochs):\n",
+        "    epoch_penalty[:] = 0\n",
+        "    for i, (data, distance_matrix) in enumerate(zip(dataloader, distance_matrices)):\n",
+        "        num_samples = 16\n",
+        "        \n",
+        "        samples, predicted_mappings, log_likelihoods_sum = mpnn_ptr(data,num_samples)\n",
+        "        # samples shape: (batch_size, num_samples, max_graph_size_in_batch)\n",
+        "        # predicted_mappings shape: (batch_size, max_graph_size_in_batch)\n",
+        "        # log_likelihoods_sum shape: (batch_size,)\n",
+        "        penalty = communication_cost(data.edge_index, data.edge_attr, data.batch, data.num_graphs, distance_matrix, predicted_mappings)\n",
+        "        epoch_penalty[i] = penalty.sum()\n",
+        "        penalty_baseline = calculate_baseline(data.edge_index, data.edge_attr, data.batch, data.num_graphs, distance_matrix, samples)\n",
+        "        loss = torch.mean((penalty.detach() - penalty_baseline.detach()) * log_likelihoods_sum)\n",
+        "        optim.zero_grad()\n",
+        "        loss.backward()\n",
+        "        nn.utils.clip_grad_norm_(mpnn_ptr.parameters(), max_norm=1, norm_type=2)\n",
+        "        optim.step()\n",
+        "    batch_loss = epoch_penalty.sum().item()\n",
+        "    loss_list_pre.append(batch_loss)\n",
+        "    print('Epoch: {}/{}, Loss: {}'.format(epoch + 1, num_epochs, batch_loss))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
