addition of a smaller dataset for experimentation + checkpointing model while training

--- a/train_multiple_graph.ipynb
+++ b/train_multiple_graph.ipynb
@@ -2,24 +2,22 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "pKmQ41LclIGu"
+      },
+      "outputs": [],
       "source": [
         "try:\n",
         "  import google.colab\n",
         "  IN_COLAB = True\n",
         "except:\n",
         "  IN_COLAB = False"
-      ],
-      "metadata": {
-        "id": "pKmQ41LclIGu"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!nvidia-smi -L"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -27,25 +25,22 @@
         "id": "dcwGi3SH7NcN",
         "outputId": "b08007ce-b57b-46c8-8cec-302ed2d25701"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "GPU 0: Tesla P100-PCIE-16GB (UUID: GPU-f6b9f2b7-d89a-d9c0-cd71-8671b914793c)\n"
           ]
         }
+      ],
+      "source": [
+        "!nvidia-smi -L"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if IN_COLAB:\n",
-        "    !git clone https://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@github.com/arunsammit/MPNN-Ptr mpnn_ptr\n",
-        "    !rsync -a mpnn_ptr/* . \n",
-        "    !rm mpnn_ptr -r"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -53,11 +48,10 @@
         "id": "5hwsmwyGjkuW",
         "outputId": "16e4d0d9-9b4c-4a36-89ee-da132812839f"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'mpnn_ptr'...\n",
             "remote: Enumerating objects: 676, done.\u001b[K\n",
@@ -68,14 +62,17 @@
             "Resolving deltas: 100% (326/326), done.\n"
           ]
         }
+      ],
+      "source": [
+        "if IN_COLAB:\n",
+        "    !git clone https://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@github.com/arunsammit/MPNN-Ptr mpnn_ptr\n",
+        "    !rsync -a mpnn_ptr/* . \n",
+        "    !rm mpnn_ptr -r"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if IN_COLAB: \n",
-        "    !pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.10.0+cu111.html"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,11 +80,10 @@
         "id": "dnzh012VmhYk",
         "outputId": "e8439bc7-7d61-4c78-f526-353a4a659f3d"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in links: https://data.pyg.org/whl/torch-1.10.0+cu111.html\n",
             "Collecting torch-scatter\n",
@@ -147,14 +143,15 @@
             "Successfully installed isodate-0.6.1 rdflib-6.1.1 torch-cluster-1.5.9 torch-geometric-2.0.3 torch-scatter-2.0.9 torch-sparse-0.6.12 torch-spline-conv-1.2.1 yacs-0.1.8\n"
           ]
         }
+      ],
+      "source": [
+        "if IN_COLAB: \n",
+        "    !pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.10.0+cu111.html"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -162,22 +159,23 @@
         "id": "g2H-SWyypHa4",
         "outputId": "88208679-61a0-4dd0-bfa6-ed8c0bbf7c52"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!unzip drive/MyDrive/data_MTP/data_tgff.zip -d ."
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,11 +183,10 @@
         "id": "eBsg9_P-qtP7",
         "outputId": "c4b4f09d-205c-4cac-cd1b-1d86d3f770bc"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Archive:  drive/MyDrive/data_MTP/data_tgff.zip\n",
             "   creating: ./data_tgff/\n",
@@ -249,19 +246,22 @@
             "  inflating: ./data_tgff/single/data_single_TGFF3_81.pt  \n"
           ]
         }
+      ],
+      "source": [
+        "!unzip drive/MyDrive/data_MTP/data_tgff.zip -d ."
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!rm data_tgff/multiple/train/processed -r\n",
-        "!rm data_tgff/multiple/test/processed -r"
-      ],
+      "execution_count": 16,
       "metadata": {
         "id": "uiQP1sySEEx4"
       },
-      "execution_count": 16,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!rm data_tgff/multiple/train/processed -r\n",
+        "!rm data_tgff/multiple/test/processed -r"
+      ]
     },
     {
       "cell_type": "code",
@@ -284,7 +284,8 @@
         "from datetime import datetime\n",
         "from graphdataset import MultipleGraphDataset, getDataLoader\n",
         "from train.trainers import TrainerInitPop, TrainerSR\n",
-        "from train.validation import validate_dataloader"
+        "from train.validation import validate_dataloader\n",
+        "from tqdm.notebook import tqdm"
       ]
     },
     {
@@ -295,16 +296,18 @@
       },
       "outputs": [],
       "source": [
+        "# %% initializing the parameters\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "max_graph_size = 121\n",
-        "batch_size_train = 32\n",
-        "batch_size_dev = 64\n",
+        "max_graph_size = 64\n",
+        "batch_size_train = 128\n",
+        "batch_size_dev = 256\n",
         "saved_model_path = None\n",
-        "lr = 0.001\n",
+        "lr = 0.00001\n",
         "lr_decay_gamma = .96\n",
-        "num_epochs = 50\n",
+        "num_epochs = 100\n",
         "num_samples = 8\n",
-        "training_algorithm = 'init_pop' # 'init_pop' or 'pretrain'"
+        "beam_width = 10\n",
+        "training_algorithm = 'pretrain'  # 'init_pop' or 'pretrain'"
       ]
     },
     {
@@ -317,10 +320,12 @@
       "source": [
         "root_train = 'data_tgff/multiple/train'\n",
         "root_dev = 'data_tgff/multiple/test'\n",
-        "train_good_files = ['traindata_multiple_TGFF_norm_12.pt', 'traindata_multiple_TGFF_norm_16.pt', 'traindata_multiple_TGFF_norm_20.pt', 'traindata_multiple_TGFF_norm_36.pt', 'traindata_multiple_TGFF_norm_49.pt', 'traindata_multiple_TGFF_norm_56.pt', 'traindata_multiple_TGFF_norm_64.pt', 'traindata_multiple_TGFF_norm_72.pt', 'traindata_multiple_TGFF_norm_81.pt', 'traindata_multiple_TGFF_norm_90.pt', 'traindata_multiple_TGFF_norm_100.pt', 'traindata_multiple_TGFF_norm_121.pt']\n",
-        "dev_good_files = ['testdata_multiple_TGFF_norm_16.pt', 'testdata_multiple_TGFF_norm_32.pt', 'testdata_multiple_TGFF_norm_64.pt', 'testdata_multiple_TGFF_norm_81.pt', 'testdata_multiple_TGFF_norm_121.pt']\n",
-        "train_dataloader = getDataLoader('data_tgff/multiple/train', batch_size_train, max_graph_size = max_graph_size, raw_file_names = train_good_files)\n",
-        "dev_dataloader = getDataLoader('data_tgff/multiple/test', batch_size_dev, max_graph_size = max_graph_size, raw_file_names = dev_good_files)"
+        "train_good_files = ['traindata_multiple_TGFF_norm_64.pt']\n",
+        "dev_good_files = ['test_data_TGFF_norm_64.pt']\n",
+        "train_dataloader = getDataLoader(\n",
+        "    'data_tgff/multiple/train', batch_size_train, max_graph_size=max_graph_size, raw_file_names=train_good_files)\n",
+        "dev_dataloader = getDataLoader(\n",
+        "    'data_tgff/multiple/test', batch_size_dev, max_graph_size=max_graph_size, raw_file_names=dev_good_files)"
       ]
     },
     {
@@ -335,7 +340,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "MpnnPtr(\n",
@@ -358,8 +362,9 @@
               ")"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -395,9 +400,22 @@
         "    trainer = TrainerSR(mpnn_ptr, num_samples)\n",
         "distance_matrix_dict = DistanceMatrix()\n",
         "optim = torch.optim.Adam(mpnn_ptr.parameters(), lr=lr)\n",
-        "lr_schedular = torch.optim.lr_scheduler.StepLR(optim, step_size=1, gamma=lr_decay_gamma)\n",
+        "lr_schedular = torch.optim.lr_scheduler.StepLR(\n",
+        "    optim, step_size=1, gamma=lr_decay_gamma)\n",
         "loss_list_train = []\n",
         "loss_list_dev = []"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "avg_valid_comm_cost = validate_dataloader(\n",
+        "    mpnn_ptr, tqdm(dev_dataloader), distance_matrix_dict, beam_width) / len(dev_dataloader.dataset)\n",
+        "loss_list_dev.append(avg_valid_comm_cost)\n",
+        "print(f'Epoch: 0/{num_epochs} Dev Comm cost: {avg_valid_comm_cost}')"
       ]
     },
     {
@@ -413,9 +431,9 @@
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -429,10 +447,12 @@
       ],
       "source": [
         "for epoch in range(num_epochs):\n",
-        "    avg_train_comm_cost = trainer.train(train_dataloader, distance_matrix_dict, optim)\n",
+        "    avg_train_comm_cost = trainer.train(\n",
+        "        tqdm(train_dataloader), distance_matrix_dict, optim) / len(train_dataloader.dataset)\n",
         "    lr_schedular.step()\n",
         "    loss_list_train.append(avg_train_comm_cost)\n",
-        "    avg_valid_comm_cost = validate_dataloader(dev_dataloader, mpnn_ptr, distance_matrix_dict)\n",
+        "    avg_valid_comm_cost = validate_dataloader(\n",
+        "        mpnn_ptr, tqdm(dev_dataloader), distance_matrix_dict, beam_width) / len(dev_dataloader.dataset)\n",
         "    loss_list_dev.append(avg_valid_comm_cost)\n",
         "    print(f'Epoch: {epoch + 1}/{num_epochs}, Train Comm Cost: {avg_train_comm_cost:.4f}, Dev Comm Cost: {avg_valid_comm_cost:.4f}')"
       ]
@@ -486,26 +506,24 @@
         "id": "h1pBpRWSjXun"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
+    "accelerator": "GPU",
     "colab": {
       "name": "train_multiple_graph.ipynb",
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
-    "accelerator": "GPU"
-  }
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
